@@ -16,6 +16,7 @@
 - https://github.com/eclipse-syson/syson/issues/695[#695] [diagrams] Add Documentation element as graphical node in all diagrams
 - https://github.com/eclipse-syson/syson/issues/731[#731] [explorer] Allow creation of Comment from the Explorer view
 - https://github.com/eclipse-syson/syson/issues/696[#696] [diagrams] Add Comment element as graphical node in all diagrams
+- https://github.com/eclipse-syson/syson/issues/697[#697] [details] Add Comment property to Core tab of the Details view.
 
 
 == v2024.9.0
